objects/PRODUCT_SUPPRT__c.object
<CustomObject>
    <description>Support Production Information from Product Master</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is Active flag</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BASE_PRDCT__c</fullName>
        <description>Base Product</description>
        <label>Base Product</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CODE__c</fullName>
        <description>SUPPRT_SFTWR  CODE
Use this CODE as it is maintained in Product Master only in the SUPPRT_SFTWR table.</description>
        <label>CODE</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GR_Release_Name__c</fullName>
        <description>General Release Name</description>
        <label>GR Release Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Product Support Package Name</description>
        <label>Full Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPRT_SFTWR_ID__c</fullName>
        <description>Support Software ID from the Product Master
This is not unique as the same Support Software is used across General Releases</description>
        <label>SUPPRT_SFTWR_ID</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUPPRT_SFTWR_VER_ID__c</fullName>
        <description>Support Software Version ID.  This is Unique as it is the Support package for the Versioned software for the release.</description>
        <externalId>true</externalId>
        <label>SUPPRT_SFTWR_VER_ID</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VER_FULL__c</fullName>
        <description>Full Version</description>
        <label>Full Version</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Product Support Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>VER_FULL__c</columns>
        <columns>BASE_PRDCT__c</columns>
        <columns>GR_Release_Name__c</columns>
        <columns>SUPPRT_SFTWR_VER_ID__c</columns>
        <columns>Active__c</columns>
        <columns>CODE__c</columns>
        <columns>SUPPRT_SFTWR_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>NAME</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Support Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>